# EZBars

./: CONTRIBUTIONS.md  Cargo.toml  LICENSE  README.md
examples/: basic.rs  custom.rs  dynamic.rs  functionality_showcase.rs  showcase.rs  style_showcase.rs  styles.rs
src/: bar.rs  iter.rs  lib.rs  multi.rs  style.rs  theme.rs
