[package]
name = "ezbars"
version = "0.0.1"
authors = ["akathail <anmolkathail@gmail.com>"]
edition = "2021"
description = "Progress bars in rust - the ez way"
repository = "https://github.com/kmolan/EZBars"
license = "MIT"
readme = "README.md"
keywords = ["cli", "progressbar", "progress", "pb", "colors"]

exclude = [
    "target/*",
    "assets/*",
    ".github/*",
    ".git/*",
    "*.png",
    "*.gif"
]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]